--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ python-dotenv==1.1.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 email-validator==2.2.0
+black==25.1.0
+isort==6.0.1
+flake8==7.3.0
