--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-# 数据库配置
+# 本地数据库配置
 DATABASE_URL=postgresql://postgres:123456@localhost:5432/postgres
+
+# 宝塔数据库配置
+# DATABASE_URL=postgresql://crm_user:crm123456@localhost:5432/crm_backend
 
 # 安全配置
 SECRET_KEY=your-secret-key-here
