--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 DATABASE_URL=postgresql://postgres:123456@localhost:5432/postgres
 
 # 宝塔数据库配置
-# DATABASE_URL=postgresql://crm_user:crm123456@localhost:5432/crm_backend
+# DATABASE_URL=postgresql://postgres:xdAhSHcFyAGL7pWc@localhost:5432/postgres
 
 # 安全配置
 SECRET_KEY=your-secret-key-here
